deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-service-deployment
  labels:
    app: media-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: media-service
  template:
    metadata:
      labels:
        app: media-service
    spec:
      containers:
        - image: "761018889743.dkr.ecr.ap-southeast-2.amazonaws.com/media-microservice:latest"
          name: media-microservice
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "128m"
            limits:
              memory: "256Mi"
              cpu: "256m"
---
apiVersion: v1
kind: Service
metadata:
  name: media-cluster-ip-service
spec:
  selector:
    app: media-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
  type: NodePort
