local-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-service-deployment
  labels:
    app: media-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-service
  template:
    metadata:
      labels:
        app: media-service
    spec:
      containers:
        - image: "media-microservice:latest"
          name: media-microservice
          ports:
            - containerPort: 8080
          imagePullPolicy: Never
          resources:
            requests:
              memory: "256Mi"
              cpu: "512m"
            limits:
              memory: "512Mi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: media-cluster-ip-service
spec:
  selector:
    app: media-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
