ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api/v1/media/
            pathType: Prefix
            backend:
              service:
                name: media-cluster-ip-service
                port:
                  number: 8080
          - path: /api/v1/profile/
            pathType: Prefix
            backend:
              service:
                name: user-cluster-ip-service
                port:
                  number: 8081
          - path: /api/v1/auth/
            pathType: Prefix
            backend:
              service:
                name: user-cluster-ip-service
                port:
                  number: 8081
          - path: /api/v1/courses/
            pathType: Prefix
            backend:
              service:
                name: course-cluster-ip-service
                port:
                  number: 8082
          - path: /api/v1/learning-content/
            pathType: Prefix
            backend:
              service:
                name: course-cluster-ip-service
                port:
                  number: 8082
          - path: /api/v1/exercises/
            pathType: Prefix
            backend:
              service:
                name: exercise-cluster-ip-service
                port:
                  number: 8083
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-internal-ingress
  namespace: default
  annotations:
      alb.ingress.kubernetes.io/scheme: internal
      alb.ingress.kubernetes.io/target-type: ip
spec:
    ingressClassName: alb
    rules:
      - http:
          paths:
            - path: /api/v1/media/
              pathType: Prefix
              backend:
                service:
                  name: media-cluster-ip-service
                  port:
                    number: 8080
            - path: /api/v1/profile/
              pathType: Prefix
              backend:
                service:
                  name: user-cluster-ip-service
                  port:
                    number: 8081
            - path: /api/v1/learning-content/
              pathType: Prefix
              backend:
                service:
                  name: course-cluster-ip-service
                  port:
                    number: 8082
